--- a/templates/input.html
+++ b/templates/input.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Away Games</title>
+    <title>Ballpark Huntr</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -32,21 +32,30 @@
   </head>
 
   <body>
+<center>
 <style>
+
+body {
+  background-image: url("/static/retryheader2.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-color: #bbbbbb; 
+  font-family: Helvetica;
+}
  .main {
  background-color: rgba(255, 255, 255, 0.5);
  margin-top: 50px;
  padding-bottom: 50px;
  }
  .main h1 {
- font-size: 3.5em;
+ font-size: 5em;
  font-family: Arial;
  color: #2E3759;
  }
  .main h2 {
  font-size: 2em;
  font-family: Arial;
- color: #2E3759;
+ color: #808080;
  }
  .main h3 {
  font-size: 2em;
@@ -63,7 +72,9 @@ ul {
 }
 li {
   display: inline-block;
+  vertical-align: middle;
 }
+
 input[type='checkbox'] {
     -webkit-appearance:none;
     width:20px;
@@ -72,106 +83,289 @@ input[type='checkbox'] {
     border-radius:5px;
     border:2px solid #555;
 }
+
 input[type='checkbox']:checked {
     background: #27db42;
 }
+input[type='checkbox']#try {
+    -webkit-appearance:none;
+    width:0px;
+    height:0px;
+    
+    border-radius:0px;
+    border:0px solid #555;
+}
+input[type='checkbox']#try:checked {
+    background: #000000;
+}
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+table#inputtable, td#input {
+  border:none;
+  vertical-align: middle;
+}
+img.resize {
+  max-width:40%;
+  max-height:40%;
+}
+
+
+th, td {
+  padding: 5px;
+}
 
 </style>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p style="font-size: 140px;font-family: Impact; color: #000000; font-style: bold;line-height: .85;text-shadow: 1px 1px #303030;">  
+BALLPARK 
+<br>
+HUNTR
+</p>
+<p style="font-size: 50px;">
+Pick your preferences:
+</p>
 
-BALLPARK HUNTR
+<br>
+
+<img src="/static/great2.jpg" align="right">
+
 
 <br><br>
+
+
 <div class="container">
         <form action="/output" method="get">
-          <div class="slidecontainer">
-            <label for="NumberofGames">Number of Games:</label>  <span id="demo"></span> 
-            <input type="range" name="numgames" class="slider" id="NumberofGames" min="2" max = "9"   value = "5">  
-            
-          <!---</div>
-          <div class="form-group"> -->
-            <label for="NumberofGamesImp">Importance</label>
-            <input type="range" name="numgamesimp" class="slider" id="NumberofGamesImp" min="0" max="100" value="50">
-          </div>
-
-          <div class="slidecontainer">
-            <label for="AverageTemperature">Desired Temperature: </label>  <span id="demo2"> </span>  F
-            <input type="range" name="avgtemp" class="slider" id="AverageTemperature" min="40" max = "90"   value = "50">  
-            
-          <!---</div>
-          <div class="form-group"> -->
-            <label for="AverageTemperatureImp">Importance</label>
-            <input type="range" name="avgtempimp" class="slider" id="AverageTemperatureImp" min="0" max="100" value="50">
-          </div>
-
-          <div class="form-group">
-            <label for="PercentDayGames">Percent Day Games</label>
-            <input type="range" name="daygames" class="slider" id="PercentDayGames" min = "0" max = "100" value = "50">
-          <!--</div>
-          <div class="form-group"> -->
-            <label for="PercentDayGamesImportance">Importance</label>
-            <input type="range" name="daygamesimp" class="slider" id="PercentDayGamesImportance" min = "0" max = "100" value = "50">
-          </div>
-          <div class="form-group">
-            <label for="QualityImportance">Which team would you rather be better?</label> Home
-            <input type="range" name="qimp" class="slider" id="QualityImportance" min = "0" max = "100"  value = "50"> Away
-          </div>
-          <div class="form-group">
-            <label for="DistanceImportance">How little do you want to travel?</label>
-            <input type="range" name="dimp" class="slider" id="DistanceImportance" min = "0" max = "100" value = "50">
-          </div>
-
-          <div class="form-group">
-            <label for="MaxBudget">Max Budget?</label>
-            <input type="text" name="maxb" class="form-control" id="MaxBudget" placeholder=500 value = 500>
-          </div>
+          Which teams do you want to visit?
+           <table id = "inputtable">
+          <tr >
+          <td id = "input">
           <li><label for = "check1"><input type="checkbox" name="loclist" value="oriole_park_at_camden_yards" id = "check1"   /> Baltimore Orioles </label></li>
+          </td>
+          <td id = "input">
           <li><label for = "check2"><input type="checkbox" name="loclist" value="guaranteed_rate_field" id = "check2" /> Chicago White Sox </label></li>
+          </td>
+          <td id = "input">
           <li><label for = "check3"><input type="checkbox" name="loclist" value="minute_maid_park" id = "check3" /> Houston Astros </label></li>
-          <li><label for = "check4"><input type="checkbox" name="example" value="ALT" id = "check4"/> Atlanta Braves </label></li>
+          </td>
+          <td id = "input">
+          <li><label for = "check4"><input type="checkbox" name="example" value="ALT" id = "check4" /> Atlanta Braves </label></li>
+          </td>
+          <td id = "input">
           <li><label for = "check5"><input type="checkbox" name="loclist" value="wrigley_field" id = "check5" /> Chicago Cubs </label></li>
-          <li><label for = "check6"><input type="checkbox" name="example" value="ARZ" id = "check6"/> Arizona Diamond Backs </label></li>
-          
-          <br>
-
+          </td>
+          <td id = "input">
+          <li><label for = "check6"><input type="checkbox" name="example" value="ARZ" id = "check6" /> Arizona Diamond Backs </label></li>
+          </td>
+          </tr>
+          <tr  >
+          <td id = "input">
           <li><label for = "check7"><input type="checkbox" name="loclist" value="fenway_park" id = "check7" /> Boston Red Sox </label></li>
-          <li><label for = "check8"><input type="checkbox" name="loclist" value="progressive_field" id = "check8" /> Cleveland Indians </label></li>
+          </td>
+          <td id = "input">
+          <li><label for = "check8"><input type="checkbox" name="loclist" value="progressive_field" id = "check8"/> Cleveland Indians </label></li>
+          </td>
+          <td id = "input">
           <li><label for = "check9"><input type="checkbox" name="loclist" value="angels_stadium_of_anaheim" id = "check9" /> Los Angeles Angels </label></li>
+          </td>
+          <td id = "input">
           <li><label for = "check10"><input type="checkbox" name="loclist" value="marlins_park" id = "check10" /> Miami Marlins </label></li>
+          </td>
+          <td id = "input">
           <li><label for = "check11"><input type="checkbox" name="loclist" value="great_american_ball_park" id = "check11" /> Cincinnati Reds </label></li>
-          <li><label for = "check12"><input type="checkbox" name="example" value="COL" id = "check12"/> Colorado Rockies </label></li>
-          
-          <br>
-
+          </td>
+          <td id = "input">
+          <li><label for = "check12"><input type="checkbox" name="example" value="COL" id = "check12" /> Colorado Rockies </label></li>
+          </td>
+          </tr>
+          <tr >
+          <td id = "input">
           <li><label for = "check13"><input type="checkbox" name="loclist" value="yankee_stadium" id = "check13" /> New York Yankees </label></li>
+          </td>
+          <td id = "input">
           <li><label for = "check14"><input type="checkbox" name="loclist" value="comerica_park" id = "check14" /> Detroit Tigers </label></li>
+          </td>
+          <td id = "input">
           <li><label for = "check15"><input type="checkbox" name="loclist" value="oac_coliseum" id = "check15" /> Oakland Athletics </label></li>
+          </td>
+          <td id = "input">
           <li><label for = "check16"><input type="checkbox" name="loclist" value="citi_field" id = "check16" /> New York Mets </label></li>
+          </td>
+          <td id = "input">
           <li><label for = "check17"><input type="checkbox" name="loclist" value="miller_park" id = "check17" /> Milwaukee Brewers </label></li>
+          </td>
+          <td id = "input">
           <li><label for = "check18"><input type="checkbox" name="loclist" value="dodger_stadium" id = "check18" /> Los Angeles Dodgers </label></li>
-          
-          <br>
-
+          </td>
+          </tr>
+          <tr >
+          <td id = "input">
           <li><label for = "check19"><input type="checkbox" name="loclist" value="tropicana_field" id = "check19" /> Tampa Bay Rays </label></li>
+          </td>
+          <td id = "input">
           <li><label for = "check20"><input type="checkbox" name="loclist" value="kauffman_stadium" id = "check20" /> Kansas City Royals </label></li>
-          <li><label for = "check21"><input type="checkbox" name="example" value="MIA" id = "check21"/> Seattle Mariners </label></li>
-          <li><label for = "check22"><input type="checkbox" name="loclist" value="citizens_bank_park" id = "check22" /> Philadelphia Phillies </label></li>
+          </td>
+          <td id = "input">
+          <li><label for = "check21"><input type="checkbox" name="example" value="SEA" id = "check21" /> Seattle Mariners </label></li>
+          </td>
+          <td id = "input">
+          <li><label for = "check22"><input type="checkbox" name="loclist" value="citizens_bank_park" id = "check22"/> Philadelphia Phillies </label></li>
+          </td>
+          <td id = "input">
           <li><label for = "check23"><input type="checkbox" name="loclist" value="pnc_park" id = "check23" /> Pittsburgh Pirates </label></li>
+          </td>
+          <td id = "input">
           <li><label for = "check24"><input type="checkbox" name="loclist" value="petco_park" id = "check24" /> San Diego Padres </label></li>
-          
-          <br>
-
+          </td>
+          </tr>
+          <tr >
+          <td id = "input">
           <li><label for = "check25"><input type="checkbox" name="loclist" value="rogers_centre" id = "check25" /> Toronto Blue Jays </label></li>
-          <li><label for = "check26"><input type="checkbox" name="example" value="CLE" id = "check26"/> Minnesota Twins </label></li>
+          </td>
+          <td id = "input">
+          <li><label for = "check26"><input type="checkbox" name="example" value="MIN" id = "check26" /> Minnesota Twins </label></li>
+          </td>
+          <td id = "input">
           <li><label for = "check27"><input type="checkbox" name="loclist" value="globe_life_park_in_arlington" id = "check27" /> Texas Rangers </label></li>
+          </td>
+          <td id = "input">
           <li><label for = "check28"><input type="checkbox" name="loclist" value="nationals_park" id = "check28" /> Washington Nationals </label></li>
+          </td>
+          <td id = "input">
           <li><label for = "check29"><input type="checkbox" name="loclist" value="busch_stadium" id = "check29" /> St. Louis Cardinals </label></li>
+          </td>
+          <td id = "input">
           <li><label for = "check30"><input type="checkbox" name="loclist" value="att_park" id = "check30"  /> San Francisco Giants </label></li>
+          </td>
+        </tr>
+      </table>
+
+      <br>
+      <br>
+
+
+
+         <table id = "inputtable">
+          <tr style="text-align:center">
+          <td id = "input">
+        
+            <label for="NumberofGames">How many games do you want to see?</label>
+            </td>
+            <td id = "input">
+            <span id="demo"></span> games  <br>
+            <input type="range" name="numgames" class="slider" id="NumberofGames" min="2" max = "9"   value = "5">  
+          </td>
+        
+           <td id = "input">
+        
+          <!---</div>
+          <div class="form-group"> -->
+            <label for="NumberofGamesImp">Importance?</label><br>
+           Low <input type="range" name="numgamesimp" class="slider" id="NumberofGamesImp" min="0" max="100" value="50"> High
           
+        </td>
+      
+        </tr>
+
+
+          <tr style="text-align:center">
+          <td id = "input">
+          <label for="AverageTemperature"> What do you want the average temperature to be? </label> 
+          </td>
+          <td id = "input">
+           <span id="demo2"> </span>  F <br>
+            <input type="range" name="avgtemp" class="slider" id="AverageTemperature" min="55" max = "85"   value ="70">  
+          </td>
+          <td id = "input">
+          
+            <label for="AverageTemperatureImp">Importance?</label> <br>
+            Low<input type="range" name="avgtempimp" class="slider" id="AverageTemperatureImp" min="0" max="100" value="50">High
+          </td>
+        </tr>
+        <tr style="text-align:center">
+          <td id = "input">
+          <label for="PercentDayGames">What percent of days during the day do you want to see?</label>
+        </td>
+          <td id = "input">
+            <span id="demo3"></span>  % <br>
+            <input type="range" name="daygames" class="slider" id="PercentDayGames" min = "0" max = "100" value = "50">
+          </td>
+          <td id = "input">
+          <label for="PercentDayGamesImportance">Importance?</label> <br>
+            Low<input type="range" name="daygamesimp" class="slider" id="PercentDayGamesImportance" min = "0" max = "100" value = "50">High
+          </td>
+        </tr>
+        <tr style="text-align:center">
+        <td id = "input" colspan="2"> 
+            <label for="DistanceImportance">How important is it that the trip is short?</label>
+          </td>
+          <td id="input" >
+            Importance? <br>
+            Low<input type="range" name="dimp" class="slider" id="DistanceImportance" min = "0" max = "100" value = "50">High
+          </td>
+        </tr>
+        <tr style="text-align:center">
+        <td id = "input" colspan="2">
+          <label for="QualityImportance">Which team would you rather be better?</label>
+        </td>
+        <td id = "input">
+            <br>
+            Away  <input type="range" name="qimp" class="slider" id="QualityImportance" min = "0" max = "100"  value = "50"> Home
+          </td>
+        </tr>
+        
+
+        <tr style="text-align:center">
+          <td id="input">
+            Would you rather get what you want or a good deal?
+          </td>
+
+          <td id="input">
+            Preferences<input type="range" name="pimp" class="slider" id="PreferencesImportance" min = "0" max = "100" value = "50">Deal
+          </td>
+
+          <td id="input" >
+            <label for="MaxBudget">What's your maximum budget?</label>
+            <input type="text" name="maxb" class="form-control" id="MaxBudget" placeholder="500" value = "500">
+          </td>
+
+        </tr>
+
+        <tr style="text-align:center">
+          <td id="input">
+            Sort by median or lowest Price?
+            <br> <br>
+           Lowest <input type="range" name="try" class="slider" id="trying" min = "0" max = "1"  value = "1"> Median
+           
+           
+
+          </td>
+          <td id="input" colspan="2">
+            
+         <button type="submit" class="btn btn-primary">Find me games!</button>         
+
+          </td>
+
+        </tr>
+        </table>
+
+          
+            
+          
+
+          <br>
+          <br>
+         
           <br>
 
-
-          <button type="submit" class="btn btn-primary">Find me games!</button>         
-
+        </table>
+ 
           <script>
           var slider2 = document.getElementById("AverageTemperature");
           var output2 = document.getElementById("demo2");
@@ -188,10 +382,35 @@ BALLPARK HUNTR
           output.innerHTML = this.value;
           }
         </script>
-          
+        <script>
+          var slider3 = document.getElementById("PercentDayGames");
+          var output3 = document.getElementById("demo3");
+          output3.innerHTML = slider3.value;
+          slider3.oninput = function() {
+          output3.innerHTML = this.value;
+          }
+        </script>
+
         </form>
     </div>
-  </div> <!-- /.container-->
+
+</center>
+
+     </div><!-- /.container -->
+
+
+     
+
+
+    <div class="container">
+
+
+
+      <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+      <script src="../static/js/bootstrap.min.js"></script>
+
+
+     </div><!-- /.container -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
